--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="staticrypt-html" prefix="og: https://ogp.me/ns#">
 <head>
-    <meta property="og:description" 
+    <meta property="og:title" 
   content="The informatio herein is solely for those obtaining it via the original source. If you are reading this, than you are not obtaining it from the original source." />
     <meta charset="utf-8">
     <title>Locked Page</title>
