--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html class="staticrypt-html">
+<html class="staticrypt-html" prefix="og: https://ogp.me/ns#">
 <head>
     <meta charset="utf-8">
     <title>Locked Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:description" content="If you're reading this, you are not invited and this information should not have been shared."/>
 
     <!-- do not cache this page -->
     <meta http-equiv="cache-control" content="max-age=0"/>
