--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Locked Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Secure Page"/>
-    <meta property="og:description" content="If you're reading this, you are not invited and this information should not have been shared."/>
+    <meta property="og:title" content="Secure Page." />
+    <meta property="og:description" content="If you're reading this, you are not invited and this information should not have been shared." />
 
     <!-- do not cache this page -->
     <meta http-equiv="cache-control" content="max-age=0"/>
