--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Locked Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Secure Page." />
-    <meta property="og:description" content="If you're reading this, you are not invited and this information should not have been shared." />
+    <meta property="og:description" content="This information is not for you. You have not been invited." />
 
     <!-- do not cache this page -->
     <meta http-equiv="cache-control" content="max-age=0"/>
