--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>Locked Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Secure Page." />
-    <meta property="og:description" content="This information is not for you. You have not been invited." />
+    <meta property="og:title" content="This information is not for you. You have not been invited." />
 
     <!-- do not cache this page -->
     <meta http-equiv="cache-control" content="max-age=0"/>
