--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Locked Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:description" content="If you're reading this, you are not invited and this information should not have been shared."/>
+    <meta property="og:title" content="If you're reading this, you are not invited and this information should not have been shared."/>
     <!-- do not cache this page -->
     <meta http-equiv="cache-control" content="max-age=0"/>
     <meta http-equiv="cache-control" content="no-cache"/>
